# datacompy-web-ui

./: MANIFEST.in  Makefile  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
src/datacompy_web_ui/: __main__.py  main.py
src/datacompy_web_ui/core/: comparison.py  file_handlers.py
src/datacompy_web_ui/ui/: app.py
src/datacompy_web_ui/ui/styles/: __init__.py  styles.css
tests/: test_comparison.py  test_file_handlers.py
